Added content to quasi quotation

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -21,6 +21,7 @@
 \usepackage{booktabs}
 \usepackage{xr}
 \usepackage{etoolbox}
+\usepackage{amssymb}
 
 \usepackage[pagewise]{lineno}
 \usepackage{fancyvrb}
