Added explanation for F-Algebras

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1349,6 +1349,34 @@ month = {April},
 year = {2014},
 url = {http://cse3521.artifice.cc/prolog-resolution.html}
 }
+@misc{website:quotationstanford,
+title = {Quotation},
+author = {Herman Cappelen,Ernest Lepore},
+month = {January},
+year = {2012},
+url = {http://plato.stanford.edu/entries/quotation/}
+}
+@misc{website:quasiquotationfreedictionary,
+title = {Quasi-Quotation},
+author = {Free Dictionary},
+month = {},
+year = {},
+url = {http://www.thefreedictionary.com/quasi-quotation}
+}
+@misc{website:usementiondistinctionwiki,
+title = {Use–mention distinction},
+author = {Wikipedia},
+month = {October},
+year = {2015},
+url = {https://en.wikipedia.org/wiki/Use%E2%80%93mention_distinction} 
+}
+@msic{website:understandingalgebrasfpcomplete,
+title = {Understanding Algebras},
+author = {Bartosz Milewski, FP Complete},
+month = {October},
+year = {2013},
+url = {https://www.fpcomplete.com/user/bartosz/understanding-algebras}
+}
 @comment{website:,
 title = ,
 author = ,
