--- a/prologin.tex
+++ b/prologin.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 %-----------------------------------------------------------------------------
-\chapter{Prolog in \_\_\_\_ }\label{chap:prologin}
+\chapter{Prolog in \_\_\_\_ other  languages}\label{chap:prologin}
 %-----------------------------------------------------------------------------
 
 Prolog in \_\_\_\_\_\_
@@ -56,5 +56,7 @@ Prolog in \_\_\_\_\_\_
 \begin{enumerate}
 \item ???
 \end{enumerate}
+
+
 
 \end{document}
