--- a/quasiquotation.tex
+++ b/quasiquotation.tex
@@ -46,12 +46,12 @@
 
 \section{What is Quasiquotation ?}
 \begin{enumerate}
-\item http://plato.stanford.edu/entries/quotation/
+\item \cite{website:quotationstanford}
 
 When language is used to attribute properties to language or otherwise theorize about it, a linguistic device is needed that ‘turns 
 language on itself’. Quotation is one such device. It is our primary meta-linguistic tool.
 
-\item http://www.thefreedictionary.com/quasi-quotation
+\item \cite{website:quasiquotationfreedictionary}
 
 a metalinguistic device for referring to the form of an expression containing variables without referring to the symbols for those 
 variables. Thus while "not p" refers to the expression consisting of the word not followed by the letter p, the quasi-quotation \newline
@@ -61,7 +61,7 @@ $\ulcorner$ not p $\urcorner$ refers to the form of any expression consisting of
 
 Quasi-quotation or Quine quotation is a linguistic device in formal languages that facilitates rigorous and terse formulation of general rules about linguistic expressions while properly observing the use–mention distinction.
 
-https://en.wikipedia.org/wiki/Use%E2%80%93mention_distinction
+\cite{website:usementiondistinctionwiki}
 The use–mention distinction is a foundational concept of analytic philosophy,[1] according to which it is necessary to make a distinction 
 between using a word (or phrase) and mentioning it
 
