--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -114,7 +114,29 @@ statement) which when executed would result in a side effect but till that point
 \end{enumerate}
 
 
+\section{What work was done in terms of points}
+\begin{enumerate}
+\item Literature review on eDSL's.  
 
+\item Short survey on multi paradigm declarative languages.
+
+\item Accumulated and evaluated \progLang{Prolog} in \progLang{Haskell}.
+
+\item Defined a procedure to open up a language starting from a generic recursive abstract syntax.
+
+\item Made a few libraries to work together.
+
+\item Some stuff for monadic unification.
+
+\item Something to show it was modular and independent of the original grammar.
+
+\item Something to show that the unification part is independent of the search strategy and hence multiple ones can be used, possibly 
+simultaneously to find a solution.
+
+\item Creating a micro language to represent and encapsulate IO operation in an eDSL so that the it remains pure even after interpretation 
+and only produces side effects when the action is actually executed and hence in some way it can be controlled. 
+
+\end{enumerate}
 
 %\texttt{\bfseries{write a paragraph}}
 \begin{comment}
