--- a/abstract.tex
+++ b/abstract.tex
@@ -21,7 +21,7 @@ attempts, improvements and future possibilities of bringing Haskell, a Purely Fu
 %\noindent\rule[0.5ex]{\linewidth}{1pt}
 
 This document looks at the problem of combining programming languages with contrasting and conflicting 
-characteristics which mostly belong to different programming paradigms. The purpose to be fulfilled here is that 
+characteristics which mostly belong to different pro\-gram\-ming pa\-ra\-digms. The purpose to be fulfilled here is that 
 rather than moulding a problem to fit in the chosen language it must be the other way around that the language 
 adapts to the problem at hand. Moreover, it reduces the need for jumping between different  languages. The aim is 
 achieved either by embedding a target language  whose features are desirable or to be captured into the host 
