Moved F-algebra to related concepts, future scope chapter, points for why embed prolog

--- a/hwh.tex
+++ b/hwh.tex
@@ -13,6 +13,8 @@ domain specific languages(EDSLs).
 
 \begin{enumerate}
 
+\item Why a Functional Language?
+
 \item \progLang{Haskell} as a functional programming language
 Haskell is an advanced purely-functional programming language. In particular, it is a polymorphically statically typed, lazy, purely 
 functional language \cite{website:haskellwiki}. It is one of the popular functional programming languages \cite{website:langpop}. 
