--- a/pwp.tex
+++ b/pwp.tex
@@ -13,7 +13,7 @@ This chapter discusses the properties of the target language \progLang{Prolog} a
 language to extend its capabilities.
 
 \begin{enumerate}
-
+\item Why a Logic Programming Language ?
 
 \item \progLang{Prolog} as a logic programming language.
 
@@ -24,7 +24,20 @@ implementations \cite{website:comparisonofprologimplementationswiki} for differe
 
 \item Why embed \progLang{Prolog} ?
 
+\begin{enumerate}
 
+\item Existing Implementations
+
+As a starting point a few publications and implementations helped in exploring the topic 
+
+\item Simple Syntax
+
+\item Simple Semantics
+
+\item Universal Horn Clauses
+
+\item Unification
+\end{enumerate}
 
 \begin{comment}
 http://eliminatingwork.blogspot.ca/2010/02/why-prolog-is-by-far-best-most.html 
