--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -6,17 +6,53 @@
 
 
 % ---------------------------------------------------------------------------
-\chapter{Related Work}\label{chap:relatedWork}
+\chapter{Related Concepts}\label{chap:relatedWork}
 % ---------------------------------------------------------------------------
 
 
- There are some technicalities which are indirectly related to the problem but do not bare a point of contact. The underpinnings of the languages throw some more light on the how different languages work to solve a problem. Different programming paradigms incorporate different operational mechanisms. For example, \progLang{Prolog} programs execute on the Warren Abstract Machine \cite{ait1999warren} which has three different storage usages; a global stack for compound terms, for environment frames and choice points and lastly the trail to record which variables bindings ought to be undone on backtracking.        
+There are some technicalities which are indirectly related to the problem but do not bare a point of contact. The underpinnings of the 
+languages throw some more light on the how different languages work to solve a problem. Different programming paradigms incorporate 
+different operational mechanisms. For example, \progLang{Prolog} programs execute on the Warren Abstract Machine \cite{ait1999warren} which 
+has three different storage usages; a global stack for compound terms, for environment frames and choice points and lastly the trail to 
+record which variables bindings ought to be undone on backtracking.        
 
-\par Constraint programming \cite{website:constraintprogwiki} is closely related to the declarative programming paradigm in the sense that the relations between variables is specified in the form of constraints. For example, consider a program to solve a simultaneous equation, now adding on to that restricting the range of the values that the variables can possible take, thus adding constraints to the possible solutions. Related to the same are Constraint Handling Rules \cite{website:chrwiki}, which are extensions to a language, simply speaking adding constraints to a language like \progLang{Prolog}.  
+\par Constraint programming \cite{website:constraintprogwiki} is closely related to the declarative programming paradigm in the sense that 
+the relations between variables is specified in the form of constraints. For example, consider a program to solve a simultaneous equation, 
+now adding on to that restricting the range of the values that the variables can possible take, thus adding constraints to the possible 
+solutions. Related to the same are Constraint Handling Rules \cite{website:chrwiki}, which are extensions to a language, simply speaking 
+adding constraints to a language like \progLang{Prolog}.  
 
-\par Lastly some details on the working of functional logic programming languages, residuation and narrowing \cite{hanus1995curry,webiste:wikicurry}. Residuation involves delaying of functions calls until they are deterministic, that is, deterministic reduction of functions with partial data. This principle is used in languages like \progLang{Escher} \cite{lloyd1999programming:escher}, \progLang{Life} \cite{website:life}, \progLang{NUE-Prolog} 
-\cite{website:nue-prolog} and \progLang{Oz} \cite{website:oz-mozart}. Narrowing on the other hand is a mixture of reduction in functional languages and unification in logic languages. In narrowing, a variable is bound a value within the specified constraints and try to find a solution, values are generated while searching rather than just for testing. The languages based on this approach are \progLang{ALF} \cite{website:alf}, \progLang{Babel} \cite{website:babel}, \progLang{LPG} \cite{bert1987lpg} and \progLang{Curry} \cite{website:curry}.   
+\par Lastly some details on the working of functional logic programming languages, residuation and narrowing 
+\cite{hanus1995curry,webiste:wikicurry}. Residuation involves delaying of functions calls until they are deterministic, that is, 
+deterministic reduction of functions with partial data. This principle is used in languages like \progLang{Escher} 
+\cite{lloyd1999programming:escher}, \progLang{Life} \cite{website:life}, \progLang{NUE-Prolog} 
+\cite{website:nue-prolog} and \progLang{Oz} \cite{website:oz-mozart}. Narrowing on the other hand is a mixture of reduction in functional 
+languages and unification in logic languages. In narrowing, a variable is bound a value within the specified constraints and try to find a 
+solution, values are generated while searching rather than just for testing. The languages based on this approach are \progLang{ALF} 
+\cite{website:alf}, \progLang{Babel} \cite{website:babel}, \progLang{LPG} \cite{bert1987lpg} and \progLang{Curry} \cite{website:curry}.   
 
+
+F-Algebras
+
+
+We are now ready to define F-algebras in the most general terms. First I'll use the language of category theory and then quickly translate 
+it to \progLang{Haskell}.
+
+An F-algebra consists of:
+\begin{enumerate}
+\item an endofunctor F in a category C,
+\item an object A in that category, and
+\item a morphism from F(A) to A.
+\end{enumerate}
+    
+An F-algebra in \progLang{Haskell} is defined by a functor f, a carrier type a, and a function from (f a) to a. (The underlying category is Hask.)
+
+Right about now the definition with which I started this post should start making sense:
+
+\mint{haskell}|type Algebra f a = f a -> a|
+
+For a given functor f and a carrier type a the algebra is defined by specifying just one function. Often this function itself is called the 
+algebra, hence my use of the name alg in previous examples.
 
 
 \begin{comment}
