updated toDo.tex, minor changes in thesis-solanki.*

--- a/hwh.tex
+++ b/hwh.tex
@@ -34,7 +34,7 @@ the host level and so on.
 \begin{enumerate}
 \item Monads
 \newline  
-Control flow defines the order/ manner of execution of statements in a program\cite{website:controlflowwiki}. The specification is set by 
+Control flow defines the order/ manner of execution of statements in a pro\-gram\cite{website:controlflowwiki}. The specification is set by 
 the programming language. Generally, in the case of imperative languages the control flow is sequential while for a functional language
 is recursion \cite{website:controlflowdalhousie}. For example, \progLang{Java} has a top down sequential execution approach. The 
 declarative style consists of defining components of programs i.e. computations not a control 
