--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -27,6 +27,8 @@
 \usepackage{fancyvrb}
 \usepackage{paralist}
 
+\hyphenation{pro-gram-ming pa-ra-digm}
+
 
 \externaldocument{background}
 \externaldocument{conclusion}
@@ -265,7 +267,7 @@
    website:toy,
    website:lambda-prolog,
    website:visual-prolog,
-   website:tablog,
+%   website:tablog,               %% FIXME !
    website:haskellwiki}
     
 	\subfile{introduction}
