--- a/toDo.tex
+++ b/toDo.tex
@@ -33,19 +33,10 @@
   \Verb!citewikipro- log,somogyi1995logic,website:prolog1000db.!  \textbf{SOLVED}
 \item
   Write enough of Chapters \ref{proto1}--\ref{proto4} that we can decide
-  what material is needed in Chapters~ \ref{sect:quasiquotation},
-  \ref{sect:metasyntacticvariables},
-  and~\ref{sect:relatedtermskeywords}.
-\item
-  {}[\TeX{}nical]
-  Remove the \Verb!\paragraph{}!s from the running text.  \LaTeX{}
-  ends a paragraph every time that it encounters two end-of-lines
-  with only whitespace between them.  \Verb!\par! does the same thing.
-
-  The \Verb!\paragraph! command is in the same family as \Verb!chapter!,
-  \Verb!\section!, and so on.  For its correct use, see later in this
-  file.
-
+  what material is needed in Chapters~ \ref{chap:quasiquotation},
+  \ref{chap:metasyntacticvariables},
+  and~\ref{chap:relatedtermskeywords}.
+\item {}[mainly done]
   If you don't like the shape of the paragraphs that you get without
   \Verb!paragraph!, use something like
   \begin{Verbatim}
@@ -57,12 +48,6 @@
 
 \item
   Rewrite (Section) Chapter 3 in formal English.
-
-\item
-  Bump the sectioning levels up by one.  That is, what is currently a
-  section should become a chapter, what is currently a subsection should
-  become a section, and so on.  It may not make sense to do this until
-  you have switch to \Verb!thesis.sty!\,.
 
 \item
   ``re-curses'' means to swear again (\textit{p} 9). \textbf{Changed to recurs}
@@ -80,6 +65,10 @@
 \item
   The abstract is too long. UNBC guidelines limit Masters' theses
   abstracts to 150 words.
+
+\item
+  Citation \Verb!logic-classes! is not defined (in
+  \Verb!./prologinhaskell.tex!). 
 
 \item [\textbf{David}]
 \item Clean up the non-exclusive license page in unbcthesis.cls
