--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1370,7 +1370,7 @@ month = {October},
 year = {2015},
 url = {https://en.wikipedia.org/wiki/Use%E2%80%93mention_distinction} 
 }
-@msic{website:understandingalgebrasfpcomplete,
+@misc{website:understandingalgebrasfpcomplete,
 title = {Understanding Algebras},
 author = {Bartosz Milewski, FP Complete},
 month = {October},
