--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1377,6 +1377,13 @@ month = {October},
 year = {2013},
 url = {https://www.fpcomplete.com/user/bartosz/understanding-algebras}
 }
+@misc{website:kindhaskellwiki,
+title = {Kind},
+author = {Haskell Wiki},
+month = {August},
+year = {2012},
+url = {https://wiki.haskell.org/Kind}
+}
 @comment{website:,
 title = ,
 author = ,
