--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -235,11 +235,107 @@ More stuff that I did not understand well can be found here,
 
 \clearpage
 
-\section{Flattening Explanation using Box Analogy}
+\section{Opening up or Extending language Explanation using Box Analogy}
 
 This section will describe what it means to \textbf{"open up or extend a language"}. 
 
+\begin{enumerate}
+\item Let us start with a sample language with a recursive abstract syntax,
+\begin{minted}[linenos]{haskell}
+type Atom         	= String
 
+data VariableName 	= VariableName Int String
+      deriving (Eq, Data, Typeable, Ord)
+
+data Term 			= Struct Atom [Term]
+          			| Var VariableName
+          			| Wildcard  
+          			| Cut Int
+      deriving (Eq, Data, Typeable)
+\end{minted}
+
+The above language represent a stripped down version of \progLang{Prolog} from \cite{prolog-lib}. The pool of the expressions that can
+be generated from \textit{Term} are restricted to the constructors,   
+
+\begin{minted}[linenos]{haskell}
+Struct "hello" [Struct "a" []] 	-- hello(a).
+Var (VariableName 125 "X")	-- X = 125.
+Wildcard	-- _.
+Cut 0	-- !.
+\end{minted}
+
+It does not allow the ability to have a \textbf{"typed"} \textit{Term}, for example a \textit{Term} of type \textit{int or string} and
+so on.
+
+
+\item So we \textbf{flatten} the language by introducing a type variable,
+
+\begin{minted}[linenos]{haskell}
+
+type Atom = String
+
+data VariableName = VariableName Int String  deriving (Show, Eq, Ord)
+
+data FlatTerm a = 
+		Struct Atom [a]
+	| Var VariableName
+	| Wildcard
+	| Cut Int deriving (Show, Eq, Ord)
+
+\end{minted}
+
+The above language can be of any type \textit{a}. A more accurate way of saying it would be that \textit{a} can be a \textit{kind} in 
+\progLang{Haskell}. 
+
+In type theory, a kind is the type of a type constructor or, less commonly, the type of a higher-order type operator. A kind system is 
+essentially a simply typed lambda calculus 'one level up,' endowed with a primitive type, denoted * and called 'type,' which is the kind of 
+any (monomorphic) data type for example \cite{website:kindhaskellwiki},
+
+\begin{minted}[linenos]{haskell}
+Int :: *
+Maybe :: * -> *
+Maybe Bool :: *
+a -> a :: *
+[] :: * -> *
+(->) :: * -> * -> *
+\end{minted}  
+
+Simply speaking the \textit{a} can be changed.  
+
+\item It gives the language the capability to be expanded. Adding some functionality to the original language could be done in a no.of
+ways 
+\begin{enumerate}
+\item Manually modifying the structure of the language,
+\begin{minted}[linenos]{haskell}
+type Atom         	= String
+
+data VariableName 	= VariableName Int String
+      deriving (Eq, Data, Typeable, Ord)
+
+data Term 			= Struct Atom [Term]
+          			| Var VariableName
+          			| Wildcard  
+          			| Cut Int
+          			| New_Constructor_1 .........
+          			| New_Constructor_2 .........
+      deriving (Eq, Data, Typeable)
+      
+\end{minted}
+
+\item Or something that can be plugged into the language which provides the functionality.
+
+\item Multiple modifications
+
+\item Outer things can be changed like just of x of y of term, but term will always be term. 
+
+\item $\exists$ quantifier stuff       
+
+\end{enumerate}  
+
+
+
+
+\end{enumerate}
 
 
 
