--- a/introduction.tex
+++ b/introduction.tex
@@ -14,15 +14,18 @@ them is difficult if not impossible. All the more reason to know how to use one.
 to utilise their true potential, one must go deeper and communicate with them. This is where the art of programming steps in.     
 \end{comment}
 
-\par Programming has become an integral part of working and interacting with computers and day by day more and more complex problems are being 
-tackled using the power of programming technologies. It is possibly the only way to talk to computers and hence the need for a robust and multi purpose 
-programming language has never been more urgent. The desirability of a programming language depends on a lot of factors such as the ease of use, the 
-features and functionalities that it provides, adaptability and what sort of problems can it solve. One is  spoilt for choice with a number of options for a 
-wide variety of programming paradigms, for example Object Oriented Languages. Over the last decade the declarative style of programming has gained 
-popularity. The methodologies that have stood out are the Functional and Logical Approaches. The former is based on Functions and Lambda Calculus, 
-while the latter is based on Horn Clause Logic. Each of them has its own advantages and ﬂaws. How does one choose which approach to adopt? Perhaps
-one does not need to choose! This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a Purely 
-Functional Programming Language and \progLang{Prolog}, a Logical Programming Language so that one is not forced to choose.
+\par Programming has become an integral part of working and interacting with computers and day by day more and more complex problems are 
+being tackled using the power of programming technologies. It is possibly the only way to talk to computers and hence the need for a robust 
+and multi purpose programming language has never been more urgent. The desirability of a programming language depends on a lot of factors 
+such as the ease of use, the features and functionalities that it provides, adaptability and what sort of problems can it solve. One is  
+spoilt for choice with a number of options for a wide variety of programming paradigms, for example Object Oriented Languages. 
+
+Over the last decade the declarative style of programming has gained 
+popularity. The methodologies that have stood out are the Functional and Logical Approaches. The former is based on Functions and Lambda 
+Calculus, while the latter is based on Horn Clause Logic. Each of them has its own advantages and ﬂaws. How does one choose which approach 
+to adopt? Perhaps one does not need to choose! This document looks at the attempts, improvements and future possibilities of uniting 
+\progLang{Haskell}, a Purely Functional Programming Language and \progLang{Prolog}, a Logical Programming Language so that one is not 
+forced to choose.
 
 
 
